# HighFidelitySensorModels

./: README.md
turtlebot3_highfidelityWheelEncoderIMU/: CMakeLists.txt  package.xml
turtlebot3_highfidelityWheelEncoderIMU/launch/: turtlebot_gazebo.launch
turtlebot3_highfidelityWheelEncoderIMU/plugins/: gazebo_ros_utils.cpp  gazebo_ros_utils.h  noisy_diff_drive.cpp  noisy_diff_drive.h  noisy_imu_sensor.cpp  noisy_imu_sensor.h
turtlebot3_highfidelityWheelEncoderIMU/scripts/: sensor_uncertainty_config.json  sensor_uncertainty_generator.py
turtlebot3_highfidelityWheelEncoderIMU/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
